update ukuran pemusatan data - wip

--- a/Ukuran_Pemusatan_Data.ipynb
+++ b/Ukuran_Pemusatan_Data.ipynb
@@ -5,8 +5,7 @@
     "colab": {
       "name": "Ukuran Pemusatan Data.ipynb",
       "version": "0.3.2",
-      "provenance": [],
-      "include_colab_link": true
+      "provenance": []
     },
     "kernelspec": {
       "name": "python3",
@@ -17,25 +16,170 @@
     {
       "cell_type": "markdown",
       "metadata": {
-        "id": "view-in-github",
+        "id": "Ol84qSZhdlPg",
         "colab_type": "text"
       },
       "source": [
-        "<a href=\"https://colab.research.google.com/github/hilalarsa/statistika-kel4/blob/master/Ukuran_Pemusatan_Data.ipynb\" target=\"_parent\"><img src=\"https://colab.research.google.com/assets/colab-badge.svg\" alt=\"Open In Colab\"/></a>"
+        "[![Open In Colab](https://colab.research.google.com/assets/colab-badge.svg)](https://colab.research.google.com/github/hilalarsa/statistika-kel4/blob/master/Ukuran_Pemusatan_Data.ipynb)"
       ]
     },
     {
-      "cell_type": "code",
+      "cell_type": "markdown",
       "metadata": {
-        "id": "CpiJ-hZtRptF",
-        "colab_type": "code",
-        "colab": {}
+        "id": "MY8tpPSMfKPk",
+        "colab_type": "text"
+      },
+      "source": [
+        "## Ukuran Pemusatan Data\n",
+        "\n",
+        "Dapat didefinisikan sebagai ukuran atau satuan yang digunakan untuk menghitung suatu gugus atau kumpulan dari banyak data. Salah satu kegunaannya adalah untuk menentukan bagaimana suatu kumpulan data dapat dibandingkan dengan kumpulan data lainnya tanpa perlu membandingkan masing-masing data, melainkan menggunaakn penghitungan data yang terpusat sehingga dapat mewakili keseluruhan nilai kumpulan data.\n",
+        "\n",
+        "Jenis pengukuran pemusatan data yang paling sering digunakan adalah :\n",
+        "- Mean\n",
+        "- Median\n",
+        "- Modus\n",
+        "- Kuartil\n",
+        "- Desil\n",
+        "- Persentil\n",
+        "\n",
+        "\n",
+        "## Mean\n",
+        "### **Rata-Rata untuk Data Tunggal**\n",
+        "\n",
+        "> $ \\overline{X} = \\frac{\\sum x}{n} $ atau $ \\overline{X} = \\frac{x_{1}+x_{2}+ ...+x_{n}}{n} $\n",
+        "\n",
+        "\n",
+        "Keterangan:\n",
+        "\n",
+        "*   $ ẋ $ = mean\n",
+        "*   $ n $ = banyaknya data\n",
+        "\n",
+        "Contoh :\n",
+        "\n",
+        "Hitung rata-rata dari lebar kelopak bunga ( 4.6, 4.7, 4.7, 4.9, 5.0,5.1, 5.4, 5.6, 5.8, 6.3, 6.3, 6.5, 7.1, 7.3, 7.6)\n",
+        "\n",
+        "Penyelesaian:\n",
+        "\n",
+        "> $ \\overline{X} = \\frac{\\sum x}{n} = \\frac{4.6+4.7+4.7+4.9+5.0+5.1+5.4+5.6+5.8+6.3+6.5+7.1+7.3+7.6}{15} = \\frac{80.6}{15} = 5.37 $\n",
+        "\n",
+        "<br><br>\n",
+        "\n",
+        "### **Rata-Rata untuk Data Berkelompok**\n",
+        "\n",
+        "> $ \\overline{X} =\\frac{\\sum fi . xi}{\\sum fi} $\n",
+        "\n",
+        "Keterangan:\n",
+        "\n",
+        "* $ fi $ = frekuensi\n",
+        "* $ xi $ = nilai tengah (jumlah tepi bawah dan tepi atas di bagi 2)\n",
+        "\n",
+        "|||||\n",
+        "|--- |--- |--- |--- |\n",
+        "|**Interval Jumlah**|**Frekuensi ( $f$ )**|**Nilai Tengah ( $x$ )**|**Frekuensi . Nilai Tengah ( $ f.x $ ) **|\n",
+        "| 4.5 – 5 | 4 | 4.75 | 19 |\n",
+        "| 5 – 5.5\t| 3 | 5.2 | 15.6 |\n",
+        "| 5.5 – 6\t| 2 | 5.7 | 11.4 |\n",
+        "| 6 - 6.5 | 2 | 6.3 | 12.6 |\n",
+        "| 6.5 - 7 | 1 | 6.5 | 6.5 |\n",
+        "| 7 - 7.5 | 2 | 7.2 | 14.4 |\n",
+        "| 7.5 - 8 | 1 | 7.5 | 7.5 |\n",
+        "| Jumlah | $\\sum{f} = $ \t15 | | $ \\sum{f.x = } 87 $ |\n",
+        "\n",
+        "Hasil : $ Mean =\\frac{\\sum fi.xi}{\\sum fi} = \\frac{87}{15} = 5,8 $\n"
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "RVKwx55-sV23",
+        "colab_type": "text"
+      },
+      "source": [
+        "## Median\n",
+        "\n",
+        "Median adalah nilai data yang terletak di tengah setelah data diurutkan.\n",
+        "\n",
+        "---\n",
+        "\n",
+        "### **Median untuk Data Tunggal**\n",
+        "\n",
+        "*   Jika banyaknya data n ganjil\n",
+        " \n",
+        " $ Me = X_{\\frac{n+1}{2}} $\n",
+        "\n",
+        "*   Jika banyaknya data n genap\n",
+        "\n",
+        " $ Me = \\frac{X_{\\frac{n}{2}} + X_{\\frac{n}{2}+1}}{2} $\n",
+        "\n",
+        "Keterangan :\n",
+        "\n",
+        "*   $ Me $ = Median\n",
+        "*   $ n $ = jumlah data\n",
+        "*   $ x $ = nilai data\n",
+        "\n",
+        "**Contoh :**\n",
+        "\n",
+        "1.  Tentukan median dari data lebar kelopak bunga sbb : 4.6, 4.7, 4.7, 4.9, 5.0,5.1, 5.4, 5.6, 5.8, 6.3, 6.3, 6.5, 7.1, 7.3, 7.6\n",
+        " \n",
+        " N= 12 (genap) => Jadi, mediannya adlah 5.6\n",
+        " \n",
+        "2. Tentukan median dari data lebar kelopak bunga sbb : 4.6, 4.7, 4.7, 4.9, 5.0,5.1, 5.4, 5.6, 5.8, 6.3, 6.3, 6.5, 7.1, 7.3\n",
+        "\n",
+        " $ Me = \\frac{X_{\\frac{n}{2}} + X_{\\frac{n}{2}+1}}{2} $\n",
+        "\n",
+        " \n",
+        " $ Me = \\frac{1}{2}(5.4 + 5.6) = \\frac{1}{2}(11) = 11,5$ \n",
+        "\n",
+        "\n",
+        "---\n",
+        "\n",
+        "### **Median untuk data berkelompok**\n",
+        "\n",
+        "> $ Me = Tb + \\frac{\\frac{1}{2}n-F }{f}.c $\n",
+        "\n",
+        "Keterangan :\n",
+        "*   $ Tb $ = Tepi bawah kelas median (Batas bawah – 0,5) \n",
+        "*   $ F $ = Frekuensi kumulatif sebelum median\n",
+        "*   $ f $ = Frekuensi\n",
+        "*   $ c $ = Panjang kelas\n",
+        "*   $ n $ = Jumlah frekuensi\n",
+        "\n",
+        "**Contoh :**\n",
+        "\n",
+        "|||||\n",
+        "|--- |--- |--- |--- |\n",
+        "|**Interval Jumlah**|**Frekuensi ( $f$ )**|**Frekuensi Kumulatif ( $x$ )**|\n",
+        "| 4.5 – 5 | 4 | 4.75 | \n",
+        "| 5 – 5.5\t| 3 | 5.2 | \n",
+        "| 5.5 – 6\t| 2 | 5.7 | \n",
+        "| 6 - 6.5 | 2 | 6.3 | \n",
+        "| 6.5 - 7 | 1 | 6.5 | \n",
+        "| 7 - 7.5 | 2 | 7.2 | \n",
+        "| 7.5 - 8 | 1 | 7.5 | \n",
+        "| Jumlah | $\\sum{f} = $ \t15 | | - |\n",
+        "||||\n",
+        "\n",
+        "Penyelesaian : \n",
+        "\n",
+        "* Letak kelas median: Setengah dari seluruh data = 15 pada range 5.5-6.\n",
+        "* $ Tb $ = 5.5 – 0,5 = 5\n",
+        "* $ c $ = 0.5\n",
+        "* $ n $ = 15\n",
+        "* $ f $ = 2 (frekuensi kelas median)\n",
+        "* $ F $ = 2 + 3 = 5\n",
+        "\n",
+        "$ Median = T_{b} + (\\frac{\\frac{1}{2}n-F}{f}).c = 5 + (\\frac{\\frac{1}{2}15-5}{2}).0.5 =6.25 $\n"
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "u4FAkq8Pvak4",
+        "colab_type": "text"
       },
       "source": [
         ""
-      ],
-      "execution_count": 0,
-      "outputs": []
+      ]
     }
   ]
 }
