--- a/Ukuran_Pemusatan_Data.ipynb
+++ b/Ukuran_Pemusatan_Data.ipynb
@@ -51,7 +51,7 @@
         "\n",
         "Keterangan:\n",
         "\n",
-        "*   $ ẋ $ = mean\n",
+        "*   $ x $ = mean\n",
         "*   $ n $ = banyaknya data\n",
         "\n",
         "Contoh :\n",
@@ -174,11 +174,240 @@
     {
       "cell_type": "markdown",
       "metadata": {
+        "id": "NT1O4Bq522Fw",
+        "colab_type": "text"
+      },
+      "source": [
+        "## Modus\n",
+        "Modus adalah data yang paling sering muncul atau memiliki frekuensi tertinggi. \n",
+        "\n",
+        "\n",
+        "---\n",
+        "\n",
+        "### Modus untuk data tunggal\n",
+        "\n",
+        "Modus dari data tunggal adalah data yang paling sering muncul\n",
+        "\n",
+        "**Contoh :**\n",
+        "\n",
+        "Tentukan modus dari data berikut ! 4.6, 4.7, 4.7, 4.9, 5.0,5.1, 5.4, 5.6, 5.8, 6.3, 6.3, 6.5, 7.1, 7.3, 7.6\n",
+        "\n",
+        "Penyelesaian : Data yang paling sering muncul adalah 6.3, maka Mo = 6.3\n",
+        "\n",
+        "\n",
+        "---\n",
+        "\n",
+        "### Modus untuk data berkelompok\n",
+        "\n",
+        "> $ Mo = T_{b} + \\frac{d1}{d1+d2}.c $\n",
+        "\n",
+        "Keterangan :\n",
+        "\n",
+        "*   $ Tb $ = Tepi bawah kelas modus\n",
+        "*   $ d1 $ = Selisih antara frekuensi modus dengan frekuensi sebelumnya\n",
+        "*   $ d2 $ = Selisih antara frekuensi modus dengan frekuensi sesudahnya\n",
+        "*   $ c $ = Panjang kelas\n",
+        "\n",
+        "**Contoh :**\n",
+        "\n",
+        "|||||\n",
+        "|--- |--- |--- |--- |\n",
+        "|**Interval Jumlah**|**Frekuensi ( $f$ )**|**Frekuensi Kumulatif ( $x$ )**|\n",
+        "| 4.5 – 5 | 4 | 4.75 | \n",
+        "| 5 – 5.5\t| 3 | 5.2 | \n",
+        "| 5.5 – 6\t| 2 | 5.7 | \n",
+        "| 6 - 6.5 | 2 | 6.3 | \n",
+        "| 6.5 - 7 | 1 | 6.5 | \n",
+        "| 7 - 7.5 | 2 | 7.2 | \n",
+        "| 7.5 - 8 | 1 | 7.5 | \n",
+        "| Jumlah | $\\sum{f} = $ \t15 | | - |\n",
+        "||||\n",
+        "\n",
+        "Penyelesaian : \n",
+        "\n",
+        "*   Kelas modul = kelas ke-1\n",
+        "*   $ Tb $ = 4.5-0.5 = 4\n",
+        "*   $ d1 $ = 7 – 0 = 7\n",
+        "*   $ d2 $ = 7 – 3 = 4\n",
+        "*   $ c $ = 0.5\n",
+        "\n",
+        "$ Mo = T_{b} + \\frac{d1}{d1+d2}.c = 4 + (\\frac{7}{7+4}).0.5 = 4.315 $"
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
         "id": "u4FAkq8Pvak4",
         "colab_type": "text"
       },
       "source": [
-        ""
+        "## Kuartil\n",
+        "\n",
+        "Kuartil adalah nilai yang membagi suatu data terurut atau sekumpulan data yang telah diurutkan menjadi empat bagian. \n",
+        "\n",
+        "---\n",
+        "\n",
+        "Kuartil dialmbangkan dengan $Q$ . Dalam satu urutan data terdapat 3 jenis kuartil yaitu, kuartil bawah $(Q_{1})$, kuartil tengah $(Q_{2})$, dan kuartil atas $(Q_{3})$. Cara menentukan kuartil adalah sebagai berikut:\n",
+        "\n",
+        "*   Kuartil bawah adalah data pada posisi 1/4 dari kumpulan data yang telah diurutkan.\n",
+        "*   Kuartil tengah adalah data pada posisi 2/4 dari kumpulan data yang telah diurutkan. Kuartil tengah sama dengan median.\n",
+        "*   Kuartil atas adalah data pada posisi 3/4 dari kumpulan data yang telah diurutkan.\n",
+        "\n",
+        "\n",
+        "### Kuartil untuk data tunggal\n",
+        "\n",
+        "> $Q_{i} =  \\frac{i(n+1)}{4}$\n",
+        "\n",
+        "Keterangan :\n",
+        "\n",
+        "*   $ Q_{i} $ = Kuartil ke-$i$\n",
+        "*   $ n $ =  Banyaknya data\n",
+        "\n",
+        "**Contoh :**\n",
+        "\n",
+        "Tentukan $Q_{1}$, $Q_{2}$, dan $Q_{3}$ dari  4.6, 4.7, 4.7, 4.9, 5.0,5.1, 5.4, 5.6, 5.8, 6.3, 6.3, 6.5, 7.1, 7.3, 7.6\n",
+        "\n",
+        "Penyelesaian :\n",
+        "\n",
+        "*   Data terurut 4.6, 4.7, 4.7, 4.9, 5.0,5.1, 5.4, 5.6, 5.8, 6.3, 6.3, 6.5, 7.1, 7.3, 7.6\n",
+        "*   $ n $ = 17\n",
+        "\n",
+        "$ Q_{1} =  \\frac{i(n+1)}{4} = \\frac{1(15+1)}{4} = \\frac{16}{4} = 4 $\n",
+        "\n",
+        "$ Q_{1} = X_{4}+0,5(X_{5}+X_{4}) = 4.9 +0,5(5.0-4.9) = 4.95 $\n",
+        "\n",
+        "$ Q_{2} =  \\frac{i(n+1)}{4} = \\frac{2(15+1)}{4} = \\frac{16}{2} = 8 $\n",
+        "\n",
+        "$ Q_{3} =  \\frac{i(n+1)}{4} = \\frac{3(15+1)}{4} = \\frac{48}{4} = 12 $\n",
+        "\n",
+        "$ Q_{3} = X_{12}+0,5(X_{13}+X_{12}) = 6.5 +0,5(7.1-6.5) = 6.8 $\n",
+        "\n",
+        "---\n",
+        "\n",
+        "### Kuartil untuk data berkelompok\n",
+        "\n",
+        "> $Q_{i} = Tb+p\\left(\\frac{\\frac{i.n}{4}-F}{f}\\right)$\n",
+        "\n",
+        "Keterangan :\n",
+        "\n",
+        "*   $ Q_{i} $ = Kuartil ke-$i$\n",
+        "*   $ n $ =  Banyaknya data\n",
+        "*   $ Tb $ = Tepi bawah kelas kuartil\n",
+        "*   $ p $ = Panjang kelas\n",
+        "*   $ F $= Frekuensi kumulatif sebelum kelas kuartil\n",
+        "*   $ f $ = Frekuensi kelas kuartil\n",
+        "\n",
+        "**Contoh :**\n",
+        "\n",
+        "Tentukan $Q_{i}$ dari data berikut:\n",
+        "\n",
+        "|||||\n",
+        "|--- |--- |--- |--- |\n",
+        "|**Interval Jumlah**|**Frekuensi ( $f$ )**|\n",
+        "| ***4.5 – 5*** | ***4*** |\n",
+        "| 5 – 5.5\t| 3 |\n",
+        "| 5.5 – 6\t| 2 |\n",
+        "| 6 - 6.5 | 2 |\n",
+        "| 6.5 - 7 | 1 |\n",
+        "| 7 - 7.5 | 2 |\n",
+        "| 7.5 - 8 | 1 |\n",
+        "| Jumlah | $\\sum{f} = $ \t15 | | - |\n",
+        "||||\n",
+        "\n",
+        "Penyelesaian : \n",
+        "\n",
+        "|||\n",
+        "|--- |--- |\n",
+        "|**Data**|**f**|\n",
+        "|11-20|2|\n",
+        "|***21-30***|***7***|\n",
+        "|31-44|4|\n",
+        "|45-50|6|\n",
+        "|51-60|5|\n",
+        "|61-70|6|   \n",
+        "\n",
+        "$Q_{i} = Tb+p\\left(\\frac{\\frac{i.n}{4}-F}{f}\\right) = (4.5-0.5)+0.5\\left(\\frac{4,5-0}{4}\\right) = 5.0625$\n"
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "7rZ_9vLjHX9k",
+        "colab_type": "text"
+      },
+      "source": [
+        "## Desil\n",
+        "Desil merupakan nilai yang membagi data terurut atau data yang telah diurutkan menjadi sepuluh bagian.\n",
+        "\n",
+        "---\n",
+        "\n",
+        "Desil sering dilambangkan dengan $D$. Dalam satu urutan data terdapat 9 desil masing masing disebut $D_{1}$, $D_{2}$, $D_{3}$, ..., ...., $D_{9}$ \n",
+        "\n",
+        "### Desil untuk data tunggal\n",
+        "\n",
+        "> $D_{i} =  \\frac{i(n+1)}{10}$\n",
+        "\n",
+        "Keterangan :\n",
+        "\n",
+        "*   $ D_{i} $ = Desil ke-$i$\n",
+        "*   $ n $ =  Banyaknya data\n",
+        "\n",
+        "**Contoh :**\n",
+        "\n",
+        "Tentukan desil ke-5 dari data : 4.6, 4.7, 4.7, 4.9, 5.0,5.1, 5.4, 5.6, 5.8, 6.3, 6.3, 6.5, 7.1, 7.3, 7.6\n",
+        "\n",
+        "Penyelesaian :\n",
+        "\n",
+        "*   Data terurut = 3,3,4,5,5,5,6,6,7,7,7,8,8,9,9,9\n",
+        "*   $n$ = 15\n",
+        "\n",
+        "$D_{8} =  \\frac{i(n+1)}{10} = \\frac{5(15+1)}{10} = 8$\n",
+        "\n",
+        "\n",
+        "---\n",
+        "\n",
+        "### Desil untuk data berkelompok\n",
+        "\n",
+        "> $D_{i} = Tb+p\\left(\\frac{\\frac{i.n}{10}-F}{f}\\right)$\n",
+        "\n",
+        "Keterangan :\n",
+        "\n",
+        "*   $ D_{i} $ = Desil ke-$i$\n",
+        "*   $ n $ =  Banyaknya data\n",
+        "*   $ Tb $ = Tepi bawah kelas desil\n",
+        "*   $ p $ = Panjang kelas\n",
+        "*   $ F $= Frekuensi kumulatif sebelum kelas desil\n",
+        "*   $ f $ = Frekuensi kelas desil\n",
+        "\n",
+        "Tentukan $D_{6}$ dari data berikut:\n",
+        "\n",
+        "|||||\n",
+        "|--- |--- |--- |--- |\n",
+        "|**Interval Jumlah**|**Frekuensi ( $f$ )**|\n",
+        "| ***4.5 – 5*** | ***4*** |\n",
+        "| 5 – 5.5\t| 3 |\n",
+        "| 5.5 – 6\t| 2 |\n",
+        "| 6 - 6.5 | 2 |\n",
+        "| 6.5 - 7 | 1 |\n",
+        "| 7 - 7.5 | 2 |\n",
+        "| 7.5 - 8 | 1 |\n",
+        "| Jumlah | $\\sum{f} = $ \t15 | | - |\n",
+        "||||\n",
+        "Penyelesaian : \n",
+        "\n",
+        "|||\n",
+        "|--- |--- |\n",
+        "|**Data**|**f**|**f$_{k}$**|\n",
+        "|11-13|5|5|\n",
+        "|14-16|6|11|\n",
+        "|17-19|3|***14***|\n",
+        "|***20-22***|***5***|19|\n",
+        "|23-25|7|26|\n",
+        "|27-28|4|30|\n",
+        "\n",
+        "$D_{6} = Tb+p\\left(\\frac{\\frac{i.n}{10}-F}{f}\\right) = 19,5+3\\left(\\frac{18-14}{5}\\right) = 21,9$\n",
+        "\n",
+        "Jadi, nilai $D_{6}$ adalah 21,9\n"
       ]
     }
   ]
