Menambahkan Materi Pengujian Chi-Square

--- a/Pengujian_Normalitas_Data.ipynb
+++ b/Pengujian_Normalitas_Data.ipynb
@@ -6,6 +6,7 @@
       "name": "Untitled5.ipynb",
       "version": "0.3.2",
       "provenance": [],
+      "collapsed_sections": [],
       "include_colab_link": true
     },
     "kernelspec": {
@@ -87,7 +88,36 @@
         "*   Merupakan ruangan yang dibatasi daerah kurva dengan absisnya (sumbu alas).\n",
         "*   Luas daerah biasanya dinyatakan dalam persen atau proporsi.\n",
         "*   Distribusi normal dipengaruhi oleh dua parameter, yaitu mean dan standar deviasi..\n",
-        "*  Mean menentukan lokasi pusat statistik dan standar deviasi menentukan lebar dari kurva normal."
+        "*  Mean menentukan lokasi pusat statistik dan standar deviasi menentukan lebar dari kurva normal.\n",
+        "\n",
+        "<br>\n",
+        "\n",
+        "**Uji Normalitas Menggunakan Chi Square ()**\n",
+        "\n",
+        "<br>\n",
+        "\n",
+        "**Pengertian**\n",
+        "\n",
+        "Chi Square disebut juga dengan Kai Kuadrat. Chi Square adalah salah satu jenis uji komparatif non parametris yang dilakukan pada dua variabel, di mana skala data kedua variabel adalah nominal. (Apabila dari 2 variabel, ada 1 variabel dengan skala nominal maka dilakukan uji chi square dengan merujuk bahwa harus digunakan uji pada derajat yang terendah).\n",
+        "\n",
+        "<br>\n",
+        "\n",
+        "**Karakteristik Chi-Square:**\n",
+        "*   Nilai Chi‐Square selalu positip.\n",
+        "*   Distribusi Chi‐Square dengan dk=1, 2, 3, \n",
+        "*   Bentuk Distribusi Chi‐Square adalah menjulur positif.\n",
+        "\n",
+        "<br>\n",
+        "\n",
+        "**Kegunaan Pengujian Chi-Square**\n",
+        "*   Untuk mengetahui kesesuaian antara frekuensi observasi variabel tertentu dengan frekuensi harapan teoritis\n",
+        "*   Untuk mengetahui independensi antara variabel satu dengan variabel lainnya.\n",
+        "\n",
+        "<br> \n",
+        "\n",
+        "**Persyaratan Metode Chi Square (Uji Goodness of fit Distribusi Normal)**\n",
+        "*   Data tersusun berkelompok atau dikelompokkan dalam tabel distribus frekuensi.\n",
+        "*   Cocok untuk data dengan banyaknya angka besar ( n > 30 )\n"
       ]
     }
   ]
