--- a/Penyajian_Data.ipynb
+++ b/Penyajian_Data.ipynb
@@ -31,9 +31,11 @@
         "colab_type": "text"
       },
       "source": [
-        "PENYAJIAN DATA\n",
+        "**PENYAJIAN DATA**\n",
+        "\n",
         "Penyajian data merupakan salah satu kegiatan dalam pembuatan laporan hasil penelitian yang telah  dilakukan agar dapat dipahami dan dianalisis sesuai dengan tujuan yang digunakan. Data yang disajikan harus sederhana dan jelas agar mudah dibaca.\n",
-        "Penyajian data juga dimaksudkaan agar para pengamat dapat dengan mudah memahami apa yang kita sajikan untuk selanjutnya dilakukan penilaian atau perbandingan, dan lain-lain\n",
+        "Penyajian data juga dimaksudkaan agar para pengamat dapat dengan mudah memahami apa yang kita sajikan untuk selanjutnya dilakukan penilaian atau perbandingan, dan lain-lain.\n",
+        "\n",
         "Tujuan penyajian data\n",
         "1.\tMemberi gambaran yang sistematis tentang peristiwa-peristiwa yang merupakan hasil penelitian atau observasi\n",
         "2.\tData lebih cepat ditangkap dan dimengerti\n",
@@ -41,10 +43,10 @@
         "4.\tMembuat proses pengambilan keputusan dan kesimpulan lebih tepat, cepat dan akurat\n",
         "(Salim Nahdi)\n",
         "Data disajikan dalam 2 bentuk yaitu :\n",
-        "1.\tTabulasi\n",
+        "**Tabulasi**\n",
         "Tabulasi adalah proses menempatkan data dallam bentuk tabel dengan cara membuat tabel yang berisikan data sesuai dengan kebutuhan analisis. Tabel yang dibuat mampu meringkas semua data yang akan dianalisis. Sebelum membahas tentang penyajiannya, maka yang perlu dibahas adalah bagaimana cara untuk mengorganisasi data. Salah satu teknik yang digunakan untuk mengorganisasi data adalah distribusi frekuensi (frequency distribution).\n",
         "\n",
-        "Distribusi Frekuensi\n",
+        "**Distribusi Frekuensi**\n",
         "\n",
         "Untuk membentuk distribusi frekuensi akan dijelaskan dengan contoh berikut. Terdapat 30 data panjang kelopak daun dalam cm,\n",
         "5,1\t4,9\t4,7\n",
@@ -59,20 +61,20 @@
         "5,2\t5,2\t4,7\n",
         "\n",
         "Berikut ini adalah langkah-langkah dalam membentuk distribusi frekuensi: \n",
-        "1.\tMenentukan Jumlah Kelas Interval\n",
+        "**1.\tMenentukan Jumlah Kelas Interval**\n",
         "Untuk menentukan kelas interval (K), gunakan persamaan ini:\n",
         "K = 1+3,3logn\n",
         "sesuai contoh kasus diatas, maka K = 1+3,3log30 = 1+3,3.1,48 = 5,88\n",
         "jadi jumlah kelas interval 5 atau 6. Pada kesempatan ini digunakan 5 kelas.\n",
         " \n",
-        "2.\tMenghitungRentang Data\n",
+        "**2.\tMenghitungRentang Data**\n",
         "Untuk menghitung rentang data, caranya adalah data terbesar dikurangi data terkecil kemudian ditambah 1. Data terbesar adalah 5,8, dan data terkecil adalah 4,3.\n",
         "Jadi 5,8-4,3+1= 2,5 \n",
-        "3.\tMenghitung Panjang Kelas\n",
-        "ntuk menghitung Panjang Kelas, caranya adalah Rentang Data dibagi Jumlah Kelas Interval sehingga: 2,5 / 5 = 0,5. Walaupun dari hitungan panjang kelas yang diperoleh adalah 0,5, tetapi pada penyusunan tabel ini digunakan panjang kelas 2. Supaya nilai batas bawah semua berakhir nol dan batas atas 1. Hal ini akan lebih komunikatif bila dibandingkan dengan menggunkan panjang kelas 1.\n",
-        "4.\tMenyusun Interval Kelas\n",
+        "**3.\tMenghitung Panjang Kelas**\n",
+        "# ntuk menghitung Panjang Kelas, caranya adalah Rentang Data dibagi Jumlah Kelas Interval sehingga: 2,5 / 5 = 0,5. Walaupun dari hitungan panjang kelas yang diperoleh adalah 0,5, tetapi pada penyusunan tabel ini digunakan panjang kelas 2. Supaya nilai batas bawah semua berakhir nol dan batas atas 1. Hal ini akan lebih komunikatif bila dibandingkan dengan menggunkan panjang kelas 1.\n",
+        "**4.\tMenyusun Interval Kelas**\n",
         "Secara teoritis penyusunan kelas interval dimulai dari data yang terkecil, yakni 4,3. Tetapi agar lebih kominikatif, maka dimulai dengan angka 4. \n",
-        "5.\tMenghitung Frekuensi Menggunakan Tally\n",
+        "**5.\tMenghitung Frekuensi Menggunakan Tally**\n",
         "Setelah Kelas Interval tersusun, selanjutnya memasukkan data satu per satu mulai awal hingga akhir sesuai Kelas Intervalnya, yakni dengan menandai menggunakan Tally (|||| ||). Misalnya apabila bertemu data 4,3, maka pada Kelas Interval ke-1 diberi Tally, jika bertemu data 5,8 maka pada Kelas Interval ke-2 diberi Tally. Begitu seterusnya sampai 30 data. Sehingga diperoleh data seperti tabel di bawah ini. Apabila semua data telah dimasukkan, kolom Tally bisa dihapus.\n",
         "No Kelas\tKelas Interval\tFrekuensi\n",
         "1\t0,1-1\t\n",
@@ -84,16 +86,17 @@
         "\n",
         "\n",
         "\n",
-        "2.\tGrafis\n",
+        "**Grafis**\n",
         "Selain tabel, data disajikan dalam bentuk grafis. Dalam penyajian grafis ini, data disajikan dalam bentuk gambar. Terdapat dua macam penyajian grafis, yakni dalam bentuk grafik dan diagram.\n",
-        "1.\tGrafik\n",
+        "**1.\tGrafik**\n",
         "Grafik digunakan untuk meyajikan data yang menunjukkan hubungan 2 variabel. Misalnya hubungan variabel jumlah dan variabel waktu.\n",
         "\n",
         "Grafik garis\n",
         " \n",
         "\n",
         "\n",
-        "2.\tDiagram\n",
+        "**2.\tDiagram**\n",
+        "\n",
         "Diagram digunakan untuk menunjukkan perbandingan data dari berbagai kelompok, biasanya disajikan dalam bentuk perbandingan persentase.\n",
         "\n",
         "Diagram Batang\n",
