Dibuat menggunakan Colaboratory

--- a/Penyajian_Data.ipynb
+++ b/Penyajian_Data.ipynb
@@ -71,7 +71,7 @@
         "Untuk menghitung rentang data, caranya adalah data terbesar dikurangi data terkecil kemudian ditambah 1. Data terbesar adalah 5,8, dan data terkecil adalah 4,3.\n",
         "Jadi 5,8-4,3+1= 2,5 \n",
         "**3.\tMenghitung Panjang Kelas**\n",
-        "# ntuk menghitung Panjang Kelas, caranya adalah Rentang Data dibagi Jumlah Kelas Interval sehingga: 2,5 / 5 = 0,5. Walaupun dari hitungan panjang kelas yang diperoleh adalah 0,5, tetapi pada penyusunan tabel ini digunakan panjang kelas 2. Supaya nilai batas bawah semua berakhir nol dan batas atas 1. Hal ini akan lebih komunikatif bila dibandingkan dengan menggunkan panjang kelas 1.\n",
+        " Untuk menghitung panjang kelas, caranya adalah Rentang Data dibagi Jumlah Kelas Interval sehingga: 2,5 / 5 = 0,5. Walaupun dari hitungan panjang kelas yang diperoleh adalah 0,5, tetapi pada penyusunan tabel ini digunakan panjang kelas 2. Supaya nilai batas bawah semua berakhir nol dan batas atas 1. Hal ini akan lebih komunikatif bila dibandingkan dengan menggunkan panjang kelas 1.\n",
         "**4.\tMenyusun Interval Kelas**\n",
         "Secara teoritis penyusunan kelas interval dimulai dari data yang terkecil, yakni 4,3. Tetapi agar lebih kominikatif, maka dimulai dengan angka 4. \n",
         "**5.\tMenghitung Frekuensi Menggunakan Tally**\n",
@@ -85,7 +85,6 @@
         "6\t5,1-6\t\n",
         "\n",
         "\n",
-        "\n",
         "**Grafis**\n",
         "Selain tabel, data disajikan dalam bentuk grafis. Dalam penyajian grafis ini, data disajikan dalam bentuk gambar. Terdapat dua macam penyajian grafis, yakni dalam bentuk grafik dan diagram.\n",
         "**1.\tGrafik**\n",
@@ -93,7 +92,6 @@
         "\n",
         "Grafik garis\n",
         " \n",
-        "\n",
         "\n",
         "**2.\tDiagram**\n",
         "\n",
