Menambahkan Kurva Normal Baku

--- a/Pengujian_Normalitas_Data.ipynb
+++ b/Pengujian_Normalitas_Data.ipynb
@@ -3,7 +3,7 @@
   "nbformat_minor": 0,
   "metadata": {
     "colab": {
-      "name": "Untitled5.ipynb",
+      "name": "Uji_Normalitas_Data.ipynb",
       "version": "0.3.2",
       "provenance": [],
       "collapsed_sections": [],
@@ -58,7 +58,6 @@
         "Distribusi normal banyak digunakan dalam berbagai bidang statistika, misalnya distribusi sampling rata-rata akan mendekati normal, meski distribusi populasi yang diambil tidak berdistribusi normal. Distribusi normal juga banyak digunakan dalam berbagai distribusi dalam statistika, dan kebanyakan pengujian hipotesis mengasumsikan normalitas suatu data.\n",
         "\n",
         "\n",
-        "<br>\n",
         "\n",
         "**Ciri Ciri Distribusi Normal**\n",
         "*   Memiliki parameter µ dan σ yang masing masing menentukan lokasi dan bentuk distribusi\n",
@@ -92,28 +91,37 @@
         "\n",
         "<br>\n",
         "\n",
-        "**Uji Normalitas Menggunakan Chi Square ()**\n",
+        "\n",
+        "**Kurva Normal Baku**\n",
+        "\n",
+        "![alt text](https://mutiaoctivianti.files.wordpress.com/2013/11/kn2.jpg)\n",
+        "\n",
+        "Kurva normal standar atau kurva normal baku adalah kurva normal yang mana nilai rata-ratanya sama dengan nol ( µ = 0 ) dan simpangan bakunya adalah 1 (σ = 0 ). Dalam kurva normal umum nilai rata-rata sama dengan x dan nilai simpangan baku 1s, 2s, 3s. dengan kata lain dalam kurva normal umum nilai rata-ratanya tidak sama dengan nol (µ ≠ 0) dan nilai simpangan bakunya tidak sama dengan 1 (σ ≠ 1). Kurva normal umum dapat diubah kedalam kurva normal baku dengan menggunakan rumus :\n",
+        "\n",
+        "![alt text](https://mutiaoctivianti.files.wordpress.com/2013/11/kn3.jpg)\n",
+        "\n",
+        "\n",
         "\n",
         "<br>\n",
+        "\n",
+        "**Uji Normalitas Menggunakan Chi Square ()**\n",
+        "\n",
         "\n",
         "**Pengertian**\n",
         "\n",
         "Chi Square disebut juga dengan Kai Kuadrat. Chi Square adalah salah satu jenis uji komparatif non parametris yang dilakukan pada dua variabel, di mana skala data kedua variabel adalah nominal. (Apabila dari 2 variabel, ada 1 variabel dengan skala nominal maka dilakukan uji chi square dengan merujuk bahwa harus digunakan uji pada derajat yang terendah).\n",
         "\n",
-        "<br>\n",
         "\n",
         "**Karakteristik Chi-Square:**\n",
         "*   Nilai Chi‐Square selalu positip.\n",
         "*   Distribusi Chi‐Square dengan dk=1, 2, 3, \n",
         "*   Bentuk Distribusi Chi‐Square adalah menjulur positif.\n",
         "\n",
-        "<br>\n",
         "\n",
         "**Kegunaan Pengujian Chi-Square**\n",
         "*   Untuk mengetahui kesesuaian antara frekuensi observasi variabel tertentu dengan frekuensi harapan teoritis\n",
         "*   Untuk mengetahui independensi antara variabel satu dengan variabel lainnya.\n",
         "\n",
-        "<br> \n",
         "\n",
         "**Persyaratan Metode Chi Square (Uji Goodness of fit Distribusi Normal)**\n",
         "*   Data tersusun berkelompok atau dikelompokkan dalam tabel distribus frekuensi.\n",
