add desil data kelompok

--- a/Ukuran_Pemusatan_Data.ipynb
+++ b/Ukuran_Pemusatan_Data.ipynb
@@ -379,35 +379,111 @@
         "*   $ F $= Frekuensi kumulatif sebelum kelas desil\n",
         "*   $ f $ = Frekuensi kelas desil\n",
         "\n",
-        "Tentukan $D_{6}$ dari data berikut:\n",
+        "Tentukan $D_{8}$ dari data berikut:\n",
         "\n",
         "|||||\n",
         "|--- |--- |--- |--- |\n",
         "|**Interval Jumlah**|**Frekuensi ( $f$ )**|\n",
-        "| ***4.5 – 5*** | ***4*** |\n",
+        "| 4.5 – 5 | 4 |\n",
         "| 5 – 5.5\t| 3 |\n",
-        "| 5.5 – 6\t| 2 |\n",
+        "| ***5.5 – 6***\t| ***2*** |\n",
         "| 6 - 6.5 | 2 |\n",
         "| 6.5 - 7 | 1 |\n",
         "| 7 - 7.5 | 2 |\n",
         "| 7.5 - 8 | 1 |\n",
         "| Jumlah | $\\sum{f} = $ \t15 | | - |\n",
         "||||\n",
+        "\n",
+        "Penyelesaian : \n",
+        "\n",
+        "\n",
+        "$D_{6} = Tb+p\\left(\\frac{\\frac{i.n}{10}-F}{f}\\right) = 5+0.5\\left(\\frac{7.5-3}{2}\\right) = 6.125$\n",
+        "\n",
+        "Jadi, nilai $D_{8}$ adalah 6.125\n"
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "2M8tVi5PhgYx",
+        "colab_type": "text"
+      },
+      "source": [
+        "## Persentil\n",
+        "\n",
+        "Persentil merupakan nilai yang membagi data terurut atau data yang telah diurutkan menjadi seratus bagian.\n",
+        "\n",
+        "---\n",
+        "\n",
+        "Persentil sering dilambangkan dengan $P$. Dalam satu urutan data terdapat 99 persentil masing masing disebut $P_{1}$, $P_{2}$, $P_{3}$, ..., ...., $P_{99}$ \n",
+        "\n",
+        "\n",
+        "### Persentil untuk data tunggal\n",
+        "\n",
+        "> $P_{i} =  \\frac{i(n+1)}{100}$\n",
+        "\n",
+        "Keterangan :\n",
+        "\n",
+        "*   $ P_{i} $ = Persentil ke-$i$\n",
+        "*   $ n $ =  Banyaknya data\n",
+        "\n",
+        "**Contoh :**\n",
+        "\n",
+        "Tentukan persentil ke-65 dari data : 6,5,8,7,9,4,5,8,4,7,8,5,8,4,5.\n",
+        "\n",
+        "Penyelesaian :\n",
+        "\n",
+        "*   Data terurut = 4,4,4,5,5,5,5,6,7,7,8,8,8,8,9.\n",
+        "*   $n$ = 15\n",
+        "\n",
+        "$P_{65} =  \\frac{i(n+1)}{100} = \\frac{65(15+1)}{100} = 10,4$\n",
+        "\n",
+        "$P_{65} = X_{10}+0,4(X_{11}-X_{10}) = 7+0,4(8-7) = 7,4$\n",
+        "\n",
+        "Jadi, nilai persentil ke-65 adalah 7,4.\n",
+        "\n",
+        "---\n",
+        "\n",
+        "### Persentil untuk data berkelompok\n",
+        "\n",
+        "> $P_{i} = Tb+p\\left(\\frac{\\frac{i.n}{100}-F}{f}\\right)$\n",
+        "\n",
+        "Keterangan :\n",
+        "\n",
+        "*   $ P_{i} $ = Persentil ke-$i$\n",
+        "*   $ n $ =  Banyaknya data\n",
+        "*   $ Tb $ = Tepi bawah kelas desil\n",
+        "*   $ p $ = Panjang kelas\n",
+        "*   $ F $= Frekuensi kumulatif sebelum kelas desil\n",
+        "*   $ f $ = Frekuensi kelas desil\n",
+        "\n",
+        "Tentukan $P_{30}$ dari data berikut:\n",
+        "\n",
+        "|||\n",
+        "|--- |--- |\n",
+        "|**Data**|**f**|\n",
+        "|10-16|4|\n",
+        "|15-19|6|\n",
+        "|20-24|5|\n",
+        "|25-29|7|\n",
+        "|30-34|3|\n",
+        "|35-39|5|\n",
+        "\n",
         "Penyelesaian : \n",
         "\n",
         "|||\n",
         "|--- |--- |\n",
         "|**Data**|**f**|**f$_{k}$**|\n",
-        "|11-13|5|5|\n",
-        "|14-16|6|11|\n",
-        "|17-19|3|***14***|\n",
-        "|***20-22***|***5***|19|\n",
-        "|23-25|7|26|\n",
-        "|27-28|4|30|\n",
+        "|10-16|4|***4***|\n",
+        "|***15-19***|***6***|10|\n",
+        "|20-24|5|15|\n",
+        "|25-29|7|22|\n",
+        "|30-34|3|25|\n",
+        "|35-39|5|30|\n",
         "\n",
-        "$D_{6} = Tb+p\\left(\\frac{\\frac{i.n}{10}-F}{f}\\right) = 19,5+3\\left(\\frac{18-14}{5}\\right) = 21,9$\n",
+        "$P_{30} = Tb+p\\left(\\frac{\\frac{i.n}{100}-F}{f}\\right) = 14,5+5\\left(\\frac{9-5}{6}\\right) = 17,83$\n",
         "\n",
-        "Jadi, nilai $D_{6}$ adalah 21,9\n"
+        "Jadi, nilai $P_{30}$ adalah 17,83\n"
       ]
     }
   ]
