complete Pemusatan data

--- a/Ukuran_Pemusatan_Data.ipynb
+++ b/Ukuran_Pemusatan_Data.ipynb
@@ -32,9 +32,40 @@
       "source": [
         "## Ukuran Pemusatan Data\n",
         "\n",
-        "Dapat didefinisikan sebagai ukuran atau satuan yang digunakan untuk menghitung suatu gugus atau kumpulan dari banyak data. Salah satu kegunaannya adalah untuk menentukan bagaimana suatu kumpulan data dapat dibandingkan dengan kumpulan data lainnya tanpa perlu membandingkan masing-masing data, melainkan menggunaakn penghitungan data yang terpusat sehingga dapat mewakili keseluruhan nilai kumpulan data.\n",
+        "Dapat didefinisikan sebagai ukuran atau satuan yang digunakan untuk menghitung suatu gugus atau kumpulan dari banyak data. Salah satu kegunaannya adalah untuk menentukan bagaimana suatu kumpulan data dapat dibandingkan dengan kumpulan data lainnya tanpa perlu membandingkan masing-masing data, melainkan menggunakan penghitungan data yang terpusat sehingga diharapkan dapat mewakili keseluruhan nilai kumpulan data.\n",
         "\n",
-        "Jenis pengukuran pemusatan data yang paling sering digunakan adalah :\n",
+        "Pada penjelasan ini, digunakan data dari hasil pengukuran bunga lily pada tahun 1936 oleh R.A. Fisher (https://archive.ics.uci.edu/ml/datasets/Iris) yang berisi 150 data set pengukuran bunga Lily yang dipetakan dengan 4 buah atribut dan 1 buah kesimpulan klasifikasi :\n",
+        "1. sepal length (panjang kelopak) in cm\n",
+        "2. sepal width (lebar kelopak) in cm\n",
+        "3. petal length (panjang mahkota) in cm\n",
+        "4. petal width (lebar mahkota) in cm\n",
+        "5. class :\n",
+        "  - Iris Setosa\n",
+        "  - Iris Versicolour\n",
+        "  - Iris Virginica\n",
+        "  \n",
+        "Dengan kelompok data ini, kemudian diambil sample beberapa data dari lebar kelopak bunga, dan disusun sedemikian rupa hingga membentuk data set baru seperti dibawah :\n",
+        "\n",
+        "Dalam bentuk data tunggal\n",
+        "\n",
+        "4.6, 4.7, 4.7, 4.9, 5.0, 5.1, 5.4, 5.6, 5.8, 6.3, 6.3, 6.5, 7.1, 7.3, 7.6\n",
+        "\n",
+        "Dalam bentuk data kelompok (tabel frekuensi): \n",
+        "\n",
+        "|||||\n",
+        "|--- |--- |--- |--- |\n",
+        "|**Interval Jumlah**|**Frekuensi ( $f$ )**|\n",
+        "| ***4.5 – 5*** | ***4*** |\n",
+        "| 5 – 5.5\t| 3 |\n",
+        "| 5.5 – 6\t| 2 |\n",
+        "| 6 - 6.5 | 2 |\n",
+        "| 6.5 - 7 | 1 |\n",
+        "| 7 - 7.5 | 2 |\n",
+        "| 7.5 - 8 | 1 |\n",
+        "| Jumlah data | $\\sum{f} = $ \t15 | | - |\n",
+        "||||\n",
+        "\n",
+        "Dari data tersebut, dapat dilakukan penghitungan pemusatan data, dimana jenis pengukuran pemusatan data yang paling sering digunakan adalah :\n",
         "- Mean\n",
         "- Median\n",
         "- Modus\n",
@@ -56,7 +87,7 @@
         "\n",
         "Contoh :\n",
         "\n",
-        "Hitung rata-rata dari lebar kelopak bunga ( 4.6, 4.7, 4.7, 4.9, 5.0,5.1, 5.4, 5.6, 5.8, 6.3, 6.3, 6.5, 7.1, 7.3, 7.6)\n",
+        "Hitung rata-rata dari lebar kelopak bunga ( 4.6, 4.7, 4.7, 4.9, 5.0, 5.1, 5.4, 5.6, 5.8, 6.3, 6.3, 6.5, 7.1, 7.3, 7.6)\n",
         "\n",
         "Penyelesaian:\n",
         "\n",
@@ -97,9 +128,11 @@
       "source": [
         "## Median\n",
         "\n",
-        "Median adalah nilai data yang terletak di tengah setelah data diurutkan.\n",
+        "Median adalah nilai data yang terletak di tengah.\n",
+        "Cara untuk mendapatkan nilai Median adalah :\n",
+        "1. Urutkan data dari terkecil ke terbesar\n",
+        "2. Temukan jumlah data (n), jika jumlah data ganjil, gunakan rumus  $ Me = X_{\\frac{n+1}{2}} $, sedangkan jika data genap gunakan rumus $ Me = \\frac{X_{\\frac{n}{2}} + X_{\\frac{n}{2}+1}}{2} $\n",
         "\n",
-        "---\n",
         "\n",
         "### **Median untuk Data Tunggal**\n",
         "\n",
@@ -131,7 +164,6 @@
         " $ Me = \\frac{1}{2}(5.4 + 5.6) = \\frac{1}{2}(11) = 11,5$ \n",
         "\n",
         "\n",
-        "---\n",
         "\n",
         "### **Median untuk data berkelompok**\n",
         "\n",
@@ -179,10 +211,9 @@
       },
       "source": [
         "## Modus\n",
-        "Modus adalah data yang paling sering muncul atau memiliki frekuensi tertinggi. \n",
+        "Modus adalah data yang paling sering muncul atau memiliki frekuensi tertinggi. Dalam data kelopak bunga, terdapat data yang saling berulang, nilai modus data tersebut adalah yang memiliki nilai $ f $ atau frekuensi kemunculan data yang paling tinggi.\n",
         "\n",
         "\n",
-        "---\n",
         "\n",
         "### Modus untuk data tunggal\n",
         "\n",
@@ -195,7 +226,6 @@
         "Penyelesaian : Data yang paling sering muncul adalah 6.3, maka Mo = 6.3\n",
         "\n",
         "\n",
-        "---\n",
         "\n",
         "### Modus untuk data berkelompok\n",
         "\n",
@@ -243,16 +273,13 @@
       "source": [
         "## Kuartil\n",
         "\n",
-        "Kuartil adalah nilai yang membagi suatu data terurut atau sekumpulan data yang telah diurutkan menjadi empat bagian. \n",
-        "\n",
-        "---\n",
+        "Kuartil adalah nilai yang membagi suatu data terurut atau sekumpulan data yang telah diurutkan menjadi 4 (empat) bagian. \n",
         "\n",
         "Kuartil dialmbangkan dengan $Q$ . Dalam satu urutan data terdapat 3 jenis kuartil yaitu, kuartil bawah $(Q_{1})$, kuartil tengah $(Q_{2})$, dan kuartil atas $(Q_{3})$. Cara menentukan kuartil adalah sebagai berikut:\n",
         "\n",
         "*   Kuartil bawah adalah data pada posisi 1/4 dari kumpulan data yang telah diurutkan.\n",
         "*   Kuartil tengah adalah data pada posisi 2/4 dari kumpulan data yang telah diurutkan. Kuartil tengah sama dengan median.\n",
         "*   Kuartil atas adalah data pada posisi 3/4 dari kumpulan data yang telah diurutkan.\n",
-        "\n",
         "\n",
         "### Kuartil untuk data tunggal\n",
         "\n",
@@ -282,7 +309,6 @@
         "\n",
         "$ Q_{3} = X_{12}+0,5(X_{13}+X_{12}) = 6.5 +0,5(7.1-6.5) = 6.8 $\n",
         "\n",
-        "---\n",
         "\n",
         "### Kuartil untuk data berkelompok\n",
         "\n",
@@ -337,11 +363,7 @@
       },
       "source": [
         "## Desil\n",
-        "Desil merupakan nilai yang membagi data terurut atau data yang telah diurutkan menjadi sepuluh bagian.\n",
-        "\n",
-        "---\n",
-        "\n",
-        "Desil sering dilambangkan dengan $D$. Dalam satu urutan data terdapat 9 desil masing masing disebut $D_{1}$, $D_{2}$, $D_{3}$, ..., ...., $D_{9}$ \n",
+        "Desil merupakan nilai yang membagi data terurut atau data yang telah diurutkan menjadi sepuluh bagian. Desil sering dilambangkan dengan $D$. Dalam satu urutan data terdapat 9 desil masing masing disebut $D_{1}$, $D_{2}$, $D_{3}$, ..., ...., $D_{9}$ \n",
         "\n",
         "### Desil untuk data tunggal\n",
         "\n",
@@ -358,13 +380,12 @@
         "\n",
         "Penyelesaian :\n",
         "\n",
-        "*   Data terurut = 3,3,4,5,5,5,6,6,7,7,7,8,8,9,9,9\n",
+        "*   Data terurut = 4.6, 4.7, 4.7, 4.9, 5.0,5.1, 5.4, 5.6, 5.8, 6.3, 6.3, 6.5, 7.1, 7.3, 7.6\n",
         "*   $n$ = 15\n",
         "\n",
         "$D_{8} =  \\frac{i(n+1)}{10} = \\frac{5(15+1)}{10} = 8$\n",
         "\n",
         "\n",
-        "---\n",
         "\n",
         "### Desil untuk data berkelompok\n",
         "\n",
@@ -397,9 +418,9 @@
         "Penyelesaian : \n",
         "\n",
         "\n",
-        "$D_{6} = Tb+p\\left(\\frac{\\frac{i.n}{10}-F}{f}\\right) = 5+0.5\\left(\\frac{7.5-3}{2}\\right) = 6.125$\n",
+        "$D_{6} = Tb+p\\left(\\frac{\\frac{i.n}{10}-F}{f}\\right) = 5+0.5\\left(\\frac{6-3}{2}\\right) = 6.125$\n",
         "\n",
-        "Jadi, nilai $D_{8}$ adalah 6.125\n"
+        "Jadi, nilai $D_{8}$ adalah 5.75"
       ]
     },
     {
@@ -412,8 +433,6 @@
         "## Persentil\n",
         "\n",
         "Persentil merupakan nilai yang membagi data terurut atau data yang telah diurutkan menjadi seratus bagian.\n",
-        "\n",
-        "---\n",
         "\n",
         "Persentil sering dilambangkan dengan $P$. Dalam satu urutan data terdapat 99 persentil masing masing disebut $P_{1}$, $P_{2}$, $P_{3}$, ..., ...., $P_{99}$ \n",
         "\n",
@@ -429,20 +448,17 @@
         "\n",
         "**Contoh :**\n",
         "\n",
-        "Tentukan persentil ke-65 dari data : 6,5,8,7,9,4,5,8,4,7,8,5,8,4,5.\n",
+        "Tentukan persentil ke-50 dari data : 4.6, 4.7, 4.7, 4.9, 5.0, 5.1, 5.4, 5.6, 5.8, 6.3, 6.3, 6.5, 7.1, 7.3, 7.6\n",
         "\n",
         "Penyelesaian :\n",
         "\n",
-        "*   Data terurut = 4,4,4,5,5,5,5,6,7,7,8,8,8,8,9.\n",
+        "*   Data terurut = 4.6, 4.7, 4.7, 4.9, 5.0, 5.1, 5.4, 5.6, 5.8, 6.3, 6.3, 6.5, 7.1, 7.3, 7.6\n",
         "*   $n$ = 15\n",
         "\n",
-        "$P_{65} =  \\frac{i(n+1)}{100} = \\frac{65(15+1)}{100} = 10,4$\n",
+        "$P_{50} =  \\frac{i(n+1)}{100} = \\frac{50(15+1)}{100} = 8$\n",
         "\n",
-        "$P_{65} = X_{10}+0,4(X_{11}-X_{10}) = 7+0,4(8-7) = 7,4$\n",
+        "Jadi, nilai persentil ke-50 adalah 8\n",
         "\n",
-        "Jadi, nilai persentil ke-65 adalah 7,4.\n",
-        "\n",
-        "---\n",
         "\n",
         "### Persentil untuk data berkelompok\n",
         "\n",
@@ -457,17 +473,7 @@
         "*   $ F $= Frekuensi kumulatif sebelum kelas desil\n",
         "*   $ f $ = Frekuensi kelas desil\n",
         "\n",
-        "Tentukan $P_{30}$ dari data berikut:\n",
-        "\n",
-        "|||\n",
-        "|--- |--- |\n",
-        "|**Data**|**f**|\n",
-        "|10-16|4|\n",
-        "|15-19|6|\n",
-        "|20-24|5|\n",
-        "|25-29|7|\n",
-        "|30-34|3|\n",
-        "|35-39|5|\n",
+        "Tentukan $P_{30}$ dari data berikut: 4.6, 4.7, 4.7, 4.9, 5.0, 5.1, 5.4, 5.6, 5.8, 6.3, 6.3, 6.5, 7.1, 7.3, 7.6\n",
         "\n",
         "Penyelesaian : \n",
         "\n",
@@ -481,9 +487,9 @@
         "|30-34|3|25|\n",
         "|35-39|5|30|\n",
         "\n",
-        "$P_{30} = Tb+p\\left(\\frac{\\frac{i.n}{100}-F}{f}\\right) = 14,5+5\\left(\\frac{9-5}{6}\\right) = 17,83$\n",
+        "$P_{30} = Tb+p\\left(\\frac{\\frac{i.n}{100}-F}{f}\\right) = 5.0+0.5\\left(\\frac{4.5-3}{6}\\right) = 6.125$\n",
         "\n",
-        "Jadi, nilai $P_{30}$ adalah 17,83\n"
+        "Jadi, nilai $P_{30}$ adalah 6.125\n"
       ]
     }
   ]
